corrected time-blocks and layout issues. Added hover for save btn

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,101 +22,83 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 id="hourOfDay9" class="time-block"></h3>
+        <div class="col-1 hour">
+          <h3 class="hour9 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class= saveBtn class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class= "saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">10 AM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour10 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">11 AM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour11 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">12 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour12 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">1 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour13 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">2 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour14 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">3 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour15 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">4 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour16 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-2">
-          <h3 class="time-block">5 PM</h3>
+        <div class="col-1 hour">
+          <h3 class="hour17 time-block"></h3>
         </div>
-        <input class="col-8" class="task">
-        </input>
-        <button class="saveBtn" class="col-2">
-        </button>
+        <input class="col-10 text-area"></input>
+        <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
   </main>
