local storage complete

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,83 +21,67 @@
   </header>
   <main>
     <div class="container">
-      <div class="row">
+      <div class="row" id="9">
         <div class="col-1 hour">
-          <h3 class="hour9 time-block"></h3>
+          <p class="hour-9 time-block"></p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class= "saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="10">
         <div class="col-1 hour">
-          <h3 class="hour10 time-block"></h3>
+          <p class="hour-10 time-block"></p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="11">
         <div class="col-1 hour">
-          <h3 class="hour11 time-block"></h3>
+          <p class="hour-11 time-block"></p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="12">
         <div class="col-1 hour">
-          <h3 class="hour12 time-block"></h3>
+          <p class="hour-12 time-block"></p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="13">
         <div class="col-1 hour">
-          <h3 class="hour13 time-block"></h3>
+          <p class="hour-13 time-block">1PM</p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="14">
         <div class="col-1 hour">
-          <h3 class="hour14 time-block"></h3>
+          <p class="hour-14 time-block">2PM</p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="15">
         <div class="col-1 hour">
-          <h3 class="hour15 time-block"></h3>
+          <p class="hour-15 time-block">3PM</p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="16">
         <div class="col-1 hour">
-          <h3 class="hour16 time-block"></h3>
+          <p class="hour-16 time-block">4PM</p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+      <div class="row" id="17">
         <div class="col-1 hour">
-          <h3 class="hour17 time-block"></h3>
+          <p class="hour-17 time-block">5PM</p>
         </div>
-        <input class="col-10 text-area"></input>
+        <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
     </div>
