--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,28 +23,28 @@
     <div class="container">
       <div class="row" id="9">
         <div class="col-1 hour">
-          <p class="hour-9 time-block"></p>
+          <p class="hour-9 time-block">9AM</p>
         </div>
         <textarea class="col-10 text-area"></textarea>
         <button class= "saveBtn col-1"><i class= hover>Save</i></button>
       </div>
       <div class="row" id="10">
         <div class="col-1 hour">
-          <p class="hour-10 time-block"></p>
+          <p class="hour-10 time-block">10AM</p>
         </div>
         <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
       <div class="row" id="11">
         <div class="col-1 hour">
-          <p class="hour-11 time-block"></p>
+          <p class="hour-11 time-block">11AM</p>
         </div>
         <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
       </div>
       <div class="row" id="12">
         <div class="col-1 hour">
-          <p class="hour-12 time-block"></p>
+          <p class="hour-12 time-block">12PM</p>
         </div>
         <textarea class="col-10 text-area"></textarea>
         <button class="saveBtn col-1"><i class= hover>Save</i></button>
