textarea working with classes backgrounds

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row" id="9">
         <div class="col-1 hour">
-          <p class="hour-9 time-block">9AM</p>
+          <p class="hour-9 time-block"></p>
         </div>
         <textarea class="col-10 text-area"></textarea>
         <button class= "saveBtn col-1"><i class= hover>Save</i></button>
